feat: improve user fields - toggle activated in settings - edit values in editor - show in `Playing Now` / `Playing Next`

--- a/apps/client/src/features/event-editor/EventEditor.module.scss
+++ b/apps/client/src/features/event-editor/EventEditor.module.scss
@@ -117,3 +117,13 @@
 .fullHeight {
   height: 100%
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.rowColumn2 {
+  width: 50%;
+  padding-right: 1rem;
+}
