--- a/apps/client/src/features/info/Info.module.scss
+++ b/apps/client/src/features/info/Info.module.scss
@@ -45,3 +45,10 @@
   }
 }
 
+.divider {
+  width: 100%;
+  height: 1px;
+  border-color: rgba(255, 255, 255, 0.1);
+  border-style: dashed;
+  margin: 0.5rem 0 0 0;
+}
