--- a/apps/client/src/common/components/schedule/Schedule.scss
+++ b/apps/client/src/common/components/schedule/Schedule.scss
@@ -6,6 +6,10 @@
 
   .entry {
     font-size: clamp(16px, 1.5vw, 24px);
+    border-bottom: 1px solid #ffffff17;
+    &:last-child {
+      border-bottom: none;
+    }
 
     .entry-colour {
       background-color: var(--card-background-color-override, $viewer-card-bg-color);
@@ -13,6 +17,8 @@
       width: clamp(8px, 0.75vw, 12px);
       border-radius: 6px;
       display: inline-block;
+      margin-right: 8px;
+      margin-top: 3px;
     }
 
     .entry-times {
@@ -29,6 +35,8 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      display: flex;
+      align-items: center;
     }
 
     &:not(:last-child) {
@@ -69,3 +77,14 @@
   }
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.color-fg-muted {
+  color: var(--secondary-color-override, $viewer-secondary-color);
+}
+
+.asterisk {
+  margin-left: .6rem;
+}
