--- a/apps/client/src/common/components/title-card/TitleCard.scss
+++ b/apps/client/src/common/components/title-card/TitleCard.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  position: relative;
 
   .inline {
     display: flex;
@@ -26,8 +27,10 @@
     font-size: clamp(16px, 1.5vw, 24px);
     font-weight: 400;
     color: var(--secondary-color-override, $viewer-secondary-color);
-    margin-left: auto;
     text-transform: uppercase;
+    position: absolute;
+    top: 0;
+    right: 0;
 
     &.accent {
       color: var(--accent-color-override, $accent-color);
